--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,13 @@ header h2 {
 }
 
 footer {
-    background-image: linear-gradient(#cec8ff, white);
+    background-image: linear-gradient(to bottom, blue, skyblue, white);
     padding: 2rem 0;
 }
 
 .jumbotron {
     padding: 3rem;
-    background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
+    background-image: linear-gradient(to left, blue, rgb(0, 132, 255)); 
     color: white;
 }
 
@@ -30,3 +30,11 @@ footer {
     border-bottom: .1rem ridge;
     min-height: 200px;
 }
+/*-----
+.row {
+    border: 1px solid red;
+}
+.row div {
+    border: 1px dashed grey;
+}
+*/
