--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,14 @@ header h2 {
 }
 
 footer {
-    background-image: linear-gradient(to bottom, #6f156c, #470b91);
+    background-image: linear-gradient(to top,white, #0066ff);
     padding: 2rem 0;
 }
 
 .jumbotron {
+    margin: 0;
     padding: 3rem;
-    background-image: linear-gradient(to left,#6f156c, rgb(0, 132, 255)); 
+    background-image: linear-gradient(to left,#0066ff,#0033ff,#330066, #000066); 
     color: white;
 }
 
@@ -30,11 +31,7 @@ footer {
     border-bottom: .1rem ridge;
     min-height: 200px;
 }
-/*-----
-.row {
-    border: 1px solid red;
+
+.navbar {
+    background-color:rgb(0, 132, 255);
 }
-.row div {
-    border: 1px dashed grey;
-}
-*/
