--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,13 @@ h1, h2, h3 {
     font-family: "Lobster", cursive;
 }
 
-h2{
-    color: #3046c5;
+/*---
+h2 {
+  border: 1px solid white;
+  padding: 10px;
+  box-shadow: 4px 8px #888888;
 }
-
+---*/
 header h2 {
     color: #CEC8FF;
 }
@@ -30,12 +33,59 @@ footer div {
 }
 
 .row-content {
-    padding: 5px 0;
+    padding: 2rem 0;
     border-bottom: .1rem ridge;
     min-height: 200px;
 }
+
 
 .navbar {
     background-color:rgb(0, 132, 255);
 }
 
+.tab-content {
+    border: 1px solid #ddd;
+    border-top: none;
+    padding: 1rem;
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+img {
+    opacity: 0.9;
+}
+img:hover {
+    opacity: 1.0;
+}
+
+.img-radius {
+    border-radius: 10%;
+    border: 0;
+    
+}
+.img-radius:hover {
+    box-shadow: 3px 3px #0066ff;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 10px;
+  right: 20px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color:grey;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 4px;
+  opacity: 0.5;
+}
+
+#myBtn:hover {
+  
+  opacity: 1;
+}
