--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,8 @@
 body {
-    font-family: "Open-Sans", sans-serif;
-}
+  font-family: "Open-Sans", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 /*---
 h2 {
@@ -14,60 +12,47 @@ h2 {
 }
 ---*/
 header h2 {
-    color: #CEC8FF;
-}
+  color: #CEC8FF; }
 
 .site-footer {
-    /*background-image: linear-gradient(to top,white, #0066ff);*/
-    padding: 3rem 0;
-}
+  padding: 3rem 0; }
+
 footer div {
-    border: 0px;
-}
+  border: 0px; }
 
 .jumbotron {
-    margin: 0;
-    padding: 3rem;
-    background-image: linear-gradient(to left,#0066ff,#0033ff,#330066, #000066); 
-    color: white;
-}
+  margin: 0;
+  padding: 3rem;
+  background-image: linear-gradient(to left, #0066ff, #0033ff, #330066, #000066);
+  color: white; }
 
 .row-content {
-    padding: 2rem 0;
-    border-bottom: .1rem ridge;
-    min-height: 200px;
-}
-
+  padding: 2rem 0;
+  border-bottom: .1rem ridge;
+  min-height: 200px; }
 
 .navbar {
-    background-color:rgb(0, 132, 255);
-}
+  background-color: #0084ff; }
 
 .tab-content {
-    border: 1px solid #ddd;
-    border-top: none;
-    padding: 1rem;
-}
+  border: 1px solid #ddd;
+  border-top: none;
+  padding: 1rem; }
 
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.3);
-}
+  background-color: rgba(0, 0, 0, 0.3); }
 
 img {
-    opacity: 0.9;
-}
-img:hover {
-    opacity: 1.0;
-}
+  opacity: 0.9; }
+  img hover {
+    opacity: 1.0; }
 
 .img-radius {
-    border-radius: 10%;
-    border: 0;
-    
-}
+  border-radius: 10%;
+  border: 0; }
+
 .img-radius:hover {
-    box-shadow: 3px 3px #0066ff;
-}
+  box-shadow: 3px 3px #0066ff; }
 
 #myBtn {
   display: none;
@@ -78,14 +63,11 @@ img:hover {
   font-size: 18px;
   border: none;
   outline: none;
-  color:grey;
+  color: grey;
   cursor: pointer;
   padding: 5px;
   border-radius: 4px;
-  opacity: 0.5;
-}
+  opacity: 0.5; }
 
 #myBtn:hover {
-  
-  opacity: 1;
-}
+  opacity: 1; }
