This commit is to update carousel and jQuery

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,13 @@ footer div {
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.3); }
 
+
+  #carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
 img {
   opacity: 0.9; }
   img hover {
